--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -97,10 +97,9 @@ RUN \
   curl -s "https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key" | gpg --dearmor | tee /usr/share/keyrings/nodesource-repo.gpg >/dev/null && \
   echo "deb [signed-by=/usr/share/keyrings/postgres.gpg] https://apt.postgresql.org/pub/repos/apt noble-pgdg main" > /etc/apt/sources.list.d/pgdg.list && \
   curl -s "https://www.postgresql.org/media/keys/ACCC4CF8.asc" | gpg --dearmor | tee /usr/share/keyrings/postgres.gpg >/dev/null && \
-  {% if machine_learning_provider == "openvino" -%}
   echo "deb [signed-by=/usr/share/keyrings/deadsnakes.gpg] https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu noble main" >>/etc/apt/sources.list.d/deadsnakes.list && \
   curl -s "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xF23C5A6CF475977595C89F51BA6932366A755776" | gpg --dearmor | tee /usr/share/keyrings/deadsnakes.gpg >/dev/null && \
-  {% elif machine_learning_provider == "cuda" -%}
+  {% if machine_learning_provider == "cuda" -%}
   echo "deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2404/x86_64/ /" >>/etc/apt/sources.list.d/cuda.list && \
   curl -s "https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2404/x86_64/3bf863cc.pub" | gpg --dearmor | tee /usr/share/keyrings/cuda-archive-keyring.gpg >/dev/null && \
   printf "Package: *\nPin: release l=NVIDIA CUDA\nPin-Priority: 600" > /etc/apt/preferences.d/cuda && \
@@ -127,16 +126,11 @@ RUN \
     ocl-icd-libopencl1 \
     {% endif -%}
     {% if machine_learning_provider -%}
-    {% if machine_learning_provider == "openvino" -%}
     python3.10 \
     python3.10-dev \
     python3.10-venv \
-    {% else -%}
-    python3 \
-    python3-dev \
-    python3-venv \
-    {% endif -%}
     python3-pip \
+    python3-poetry \
     {% endif -%}
     nodejs=$NODEJS_VERSION \
     perl \
@@ -206,9 +200,7 @@ RUN \
   {% if machine_learning_provider -%}
   echo "**** build machine-learning ****" && \
   cd /tmp/immich/machine-learning && \
-  curl -sSL https://install.python-poetry.org | python3 - && \
-  export PATH="/root/.local/bin:$PATH" && \
-  {% if machine_learning_provider == "openvino" -%}python3.10 {% else %}python3 {% endif -%} -m venv /lsiopy && \
+  python3.10 -m venv /lsiopy && \
   poetry config installer.max-workers 10 && \
   poetry config virtualenvs.create false && \
   cp -a \
@@ -239,26 +231,19 @@ RUN \
   echo "hard core 0" >> /etc/security/limits.conf && \
   echo "fs.suid_dumpable 0" >> /etc/sysctl.conf && \
   echo "ulimit -S -c 0 > /dev/null 2>&1" >> /etc/profile && \
-  poetry install --sync --no-interaction --no-ansi --no-root --with {{ machine_learning_provider }} --without dev && \
+  poetry install --no-interaction --no-ansi --no-root --with {{ machine_learning_provider }} --without dev && \
   {% endif -%}
   echo "**** cleanup ****" && \
-  {% if machine_learning_provider -%}
-  curl -sSL https://install.python-poetry.org | python3 - --uninstall && \
-  {% endif -%}
   apt-get remove -y --purge \
     {% if patches -%}
     patch \
     {% endif -%}
     build-essential \
     {% if machine_learning_provider -%}
-    {% if machine_learning_provider == "openvino" -%}
     python3.10-dev \
     python3.10-venv \
-    {% else -%}
-    python3-dev \
-    python3-venv \
-    {% endif -%}
     python3-pip \
+    python3-poetry \
     {% endif -%}
     unzip && \
   apt-get autoremove -y --purge && \
@@ -266,10 +251,9 @@ RUN \
   rm -rf \
     /etc/apt/sources.list.d/node.list \
     /etc/apt/sources.list.d/pgdg.list \
-    {% if machine_learning_provider == "openvino" -%}
     /etc/apt/sources.list.d/deadsnakes.list \
     /usr/share/keyrings/deadsnakes.gpg \
-    {% elif machine_learning_provider == "cuda" -%}
+    {% if machine_learning_provider == "cuda" -%}
     /etc/apt/preferences.d/cuda \
     /etc/apt/sources.list.d/cuda.list \
     /usr/share/keyrings/cuda-archive-keyring.gpg \
