--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -42,6 +42,7 @@ ENV \
   IMMICH_MACHINE_LEARNING_URL="http://127.0.0.1:3003" \
   MACHINE_LEARNING_CACHE_FOLDER="/config/machine-learning" \
   TRANSFORMERS_CACHE="/config/machine-learning" \
+  UV_PYTHON="/usr/bin/python3.11" \
   {% else -%}
   IMMICH_MACHINE_LEARNING_ENABLED="false" \
   {% endif -%}
@@ -131,9 +132,6 @@ RUN \
     {% if machine_learning_provider -%}
     python3.11 \
     python3.11-dev \
-    python3.11-venv \
-    python3-pip \
-    python3-poetry \
     {% endif -%}
     nodejs=$NODEJS_VERSION \
     perl \
@@ -202,15 +200,27 @@ RUN \
     /app/immich/cli && \
   {% if machine_learning_provider -%}
   echo "**** build machine-learning ****" && \
+  if [ $(arch) = "x86_64" ]; then \
+    UV_PLATFORM="uv-x86_64-unknown-linux-gnu"; \
+  else \
+    UV_PLATFORM="uv-aarch64-unknown-linux-gnu"; \
+  fi && \
+  if [ -z ${UV_VERSION} ]; then \
+    UV_VERSION=$(curl -sL https://api.github.com/repos/astral-sh/uv/releases/latest | \
+      jq -r '.tag_name'); \
+  fi && \
+  curl -o \
+    /tmp/uv.tar.gz -L \
+    "https://github.com/astral-sh/uv/releases/download/${UV_VERSION}/${UV_PLATFORM}.tar.gz" && \
+  tar xf \
+    /tmp/uv.tar.gz -C \
+    /tmp --strip-components=1 && \
   cd /tmp/immich/machine-learning && \
-  python3.11 -m venv /lsiopy && \
-  poetry config installer.max-workers 10 && \
-  poetry config virtualenvs.create false && \
   cp -a \
     pyproject.toml \
-    poetry.lock \
     app \
     log_conf.json \
+    uv.lock \
     /app/immich/machine-learning && \
   cp -a \
     ann/ann.py \
@@ -234,7 +244,7 @@ RUN \
   echo "hard core 0" >> /etc/security/limits.conf && \
   echo "fs.suid_dumpable 0" >> /etc/sysctl.conf && \
   echo "ulimit -S -c 0 > /dev/null 2>&1" >> /etc/profile && \
-  poetry install --no-interaction --no-ansi --no-root --with {{ machine_learning_provider }} --without dev && \
+  /tmp/uv sync --active --frozen --extra {{ machine_learning_provider }} --no-dev --no-editable --no-install-project --compile-bytecode --no-progress && \
   {% endif -%}
   echo "**** cleanup ****" && \
   apt-get remove -y --purge \
@@ -247,9 +257,6 @@ RUN \
     build-essential \
     {% if machine_learning_provider -%}
     python3.11-dev \
-    python3.11-venv \
-    python3-pip \
-    python3-poetry \
     {% endif -%}
     unzip && \
   apt-get autoremove -y --purge && \
