fix: ml breaking change

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -52,7 +52,6 @@ ENV \
   IMMICH_BUILD_IMAGE_URL=${BUILD_IMAGE_URL} \
   IMMICH_BUILD_URL=${BUILD_URL} \
   IMMICH_MEDIA_LOCATION="/photos" \
-  IMMICH_PORT="8080" \
   IMMICH_REPOSITORY=${BUILD_REPOSITORY} \
   IMMICH_REPOSITORY_URL=${BUILD_REPOSITORY_URL} \
   IMMICH_SOURCE_COMMIT=${BUILD_SOURCE_COMMIT} \
@@ -74,7 +73,7 @@ RUN \
     {% if machine_learning_provider == "armnn" -%}
     /etc/OpenCL/vendors \
     {% endif -%}
-    /app/immich/{cli,{% if machine_learning_provider -%}machine-learning/ann,{% if machine_learning_provider == "armnn"-%}armnn,{% endif -%}{% endif -%}server/www} \
+    /app/immich/{cli,{% if machine_learning_provider -%}machine-learning,{% if machine_learning_provider == "armnn"-%}armnn,{% endif -%}{% endif -%}server/www} \
     /tmp/{immich,node_modules{% if machine_learning_provider == "armnn"-%},armnn{% endif -%}} && \
   echo "**** download immich ****" && \
   if [ -z ${IMMICH_VERSION} ]; then \
@@ -131,6 +130,7 @@ RUN \
     {% if machine_learning_provider == "armnn" -%}
     mesa-opencl-icd \
     ocl-icd-libopencl1 \
+    libgomp1 \
     {% endif -%}
     {% if machine_learning_provider -%}
     python3.11 \
@@ -220,14 +220,10 @@ RUN \
     /tmp --strip-components=1 && \
   cd /tmp/immich/machine-learning && \
   cp -a \
+    immich_ml \
     pyproject.toml \
-    app \
-    log_conf.json \
     uv.lock \
     /app/immich/machine-learning && \
-  cp -a \
-    ann/ann.py \
-    /app/immich/machine-learning/ann && \
   {% if machine_learning_provider == "armnn" -%}
   curl -o \
     /tmp/armnn.tar.gz -L \
@@ -243,6 +239,10 @@ RUN \
     /app/immich/armnn/ && \
   echo "/usr/lib/libmali.so" > /etc/OpenCL/vendors/mali.icd && \
   cd /tmp/immich/machine-learning && \
+  {% elif machine_learning_provider == "rknn" -%}
+  curl -o \
+    /usr/lib/librknnrt.so -L \
+    "https://github.com/airockchip/rknn-toolkit2/raw/refs/tags/v2.3.0/rknpu2/runtime/Linux/librknn_api/aarch64/librknnrt.so" && \
   {% endif -%}
   echo "hard core 0" >> /etc/security/limits.conf && \
   echo "fs.suid_dumpable 0" >> /etc/sysctl.conf && \
