--- a/templates/svc-machine-learning/run.j2
+++ b/templates/svc-machine-learning/run.j2
@@ -18,7 +18,7 @@ LD_LIBRARY_PATH="/app/immich/armnn"
 {% endif -%}
 export MPLCONFIGDIR="/tmp"
 export HF_HOME="/tmp"
-export IMMICH_HOST="${MACHINE_LEARNING_HOST:-"0.0.0.0"}":
+export IMMICH_HOST="${MACHINE_LEARNING_HOST:-"0.0.0.0"}"
 export IMMICH_PORT="${MACHINE_LEARNING_PORT:-"3003"}"
 
 exec \
