fix: sharp install

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -117,6 +117,7 @@ RUN \
     {% if machine_learning_provider == "openvino" -%}
     execstack \
     {% endif -%}
+    build-essential \
     libexif-dev \
     libexpat1-dev \
     libglib2.0-dev \
