fix: order envs

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -36,8 +36,6 @@ COPY patches/ /tmp/patches
 
 # environment settings
 ENV \
-  SHARP_FORCE_GLOBAL_LIBVIPS=true \
-  IMMICH_ENV="production" \
   {% if machine_learning_provider -%}
   DEVICE="{{ machine_learning_provider }}" \
   IMMICH_MACHINE_LEARNING_URL="http://127.0.0.1:3003" \
@@ -52,6 +50,7 @@ ENV \
   IMMICH_BUILD_IMAGE=${BUILD_IMAGE} \
   IMMICH_BUILD_IMAGE_URL=${BUILD_IMAGE_URL} \
   IMMICH_BUILD_URL=${BUILD_URL} \
+  IMMICH_ENV="production" \
   IMMICH_MEDIA_LOCATION="/photos" \
   IMMICH_REPOSITORY=${BUILD_REPOSITORY} \
   IMMICH_REPOSITORY_URL=${BUILD_REPOSITORY_URL} \
@@ -62,6 +61,7 @@ ENV \
   IMMICH_THIRD_PARTY_DOCUMENTATION_URL=${THIRD_PARTY_DOCUMENTATION_URL} \
   IMMICH_THIRD_PARTY_SOURCE_URL=${THIRD_PARTY_SOURCE_URL} \
   IMMICH_THIRD_PARTY_SUPPORT_URL=${THIRD_PARTY_SUPPORT_URL} \
+  SHARP_FORCE_GLOBAL_LIBVIPS="true" \
   NVIDIA_DRIVER_CAPABILITIES="compute,video,utility"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
