--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -184,7 +184,7 @@ RUN \
     package-lock.json \
     node_modules \
     dist \
-    /app/immich/server
+    /app/immich/server && \
   echo "**** setup build folders ****" && \
   cp -a \
     /tmp/immich/open-api \
