fix: add missing build packages

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -274,9 +274,11 @@ RUN \
     {% if machine_learning_provider -%}
     python3.11-dev \
     {% endif -%}
+    libaom-dev \
     libexif-dev \
     libexpat1-dev \
     libglib2.0-dev \
+    libheif-dev \
     libhwy-dev \
     libjpeg-dev \
     librsvg2-dev \
