--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -46,7 +46,7 @@ ENV \
   IMMICH_MACHINE_LEARNING_ENABLED="false" \
   {% endif -%}
   IMMICH_BUILD=${BUILD_ID} \
-  IMMICH_BUILD_DATA="/app/immich/server" \
+  IMMICH_BUILD_DATA="/app/immich/data" \
   IMMICH_BUILD_IMAGE=${BUILD_IMAGE} \
   IMMICH_BUILD_IMAGE_URL=${BUILD_IMAGE_URL} \
   IMMICH_BUILD_URL=${BUILD_URL} \
@@ -61,8 +61,12 @@ ENV \
   IMMICH_THIRD_PARTY_DOCUMENTATION_URL=${THIRD_PARTY_DOCUMENTATION_URL} \
   IMMICH_THIRD_PARTY_SOURCE_URL=${THIRD_PARTY_SOURCE_URL} \
   IMMICH_THIRD_PARTY_SUPPORT_URL=${THIRD_PARTY_SUPPORT_URL} \
-  SHARP_FORCE_GLOBAL_LIBVIPS="true" \
   NVIDIA_DRIVER_CAPABILITIES="compute,video,utility"
+
+ENV \
+  COREPACK_ENABLE_DOWNLOAD_PROMPT=0 \
+  CI=1 \
+  COREPACK_HOME=/tmp
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
@@ -74,7 +78,7 @@ RUN \
     {% if machine_learning_provider == "armnn" -%}
     /etc/OpenCL/vendors \
     {% endif -%}
-    /app/immich/{cli,{% if machine_learning_provider -%}machine-learning,{% if machine_learning_provider == "armnn"-%}armnn,{% endif -%}{% endif -%}server/{bin,www}} \
+    /app/immich/{cli,{% if machine_learning_provider -%}machine-learning,{% if machine_learning_provider == "armnn"-%}armnn,{% endif -%}{% endif -%}server} \
     /tmp/{immich,node_modules{% if machine_learning_provider == "armnn"-%},armnn{% endif -%}} && \
   echo "**** download immich ****" && \
   if [ -z ${IMMICH_VERSION} ]; then \
@@ -150,11 +154,6 @@ RUN \
     postgresql-client-15 \
     postgresql-client-16 \
     postgresql-client-17 && \
-  echo "**** copy scripts ****" && \
-  cd /tmp/immich/server/bin && \
-  cp -r \
-    get-cpus.sh \
-    /app/immich/server/bin && \
   {% if patches -%}
   echo "**** apply patches ****" && \
   cd /tmp/immich && \
@@ -162,52 +161,63 @@ RUN \
     patch -p1 < "$patch"; \
   done && \
   {% endif -%}
+  echo "**** setup pnpm ****" && \
+  npm install --global corepack@latest && \
+  corepack enable pnpm && \
   echo "**** build server ****" && \
-  cd /tmp/immich/server && \
-  npm ci --no-fund --no-update-notifier && \
-  rm -rf node_modules/@img/sharp-libvips* && \
-  rm -rf node_modules/@img/sharp-linuxmusl-x64 && \
-  cp -r \
-    node_modules/@img \
-    node_modules/exiftool-vendored.pl \
-    /tmp/node_modules && \
-  npm run build && \
-  npm prune --omit=dev --omit=optional && \
-  cp -r \
-    /tmp/node_modules/@img \
-    /tmp/node_modules/exiftool-vendored.pl \
-    node_modules && \
-  npm cache clean --force && \
-  cp -a \
-    resources \
-    package.json \
-    package-lock.json \
-    node_modules \
-    dist \
-    /app/immich/server && \
-  echo "**** build open-api ****" && \
-  cd /tmp/immich/open-api/typescript-sdk && \
-  npm ci --no-fund --no-update-notifier && \
-  npm run build && \
+  cd /tmp/immich && \
+  SHARP_IGNORE_GLOBAL_LIBVIPS=true pnpm \
+    --filter immich \
+    --frozen-lockfile \
+    build && \
+  pnpm \
+    --filter immich \
+    --frozen-lockfile \
+    --prod \
+    --no-optional \
+    --force \
+    deploy /app/immich/server && \
   echo "**** build web ****" && \
-  cd /tmp/immich/web && \
-  npm ci --no-fund --no-update-notifier && \
-  npm run build && \
+  SHARP_IGNORE_GLOBAL_LIBVIPS=true pnpm \
+    --filter @immich/sdk \
+    --filter immich-web \
+    --frozen-lockfile \
+    --force install && \
+  pnpm \
+    --filter @immich/sdk \
+    --filter immich-web \
+    build && \
+  mkdir -p \
+    /app/immich/data/www && \
   cp -a \
-    build/* \
-    static \
-    /app/immich/server/www && \
+    web/build/* \
+    web/static \
+    /app/immich/data/www && \
   echo "**** build CLI ****" && \
-  cd /tmp/immich/cli && \
-  npm ci --no-fund --no-update-notifier && \
-  npm run build && \
-  npm prune --omit=dev --omit=optional && \
+  pnpm \
+    --filter @immich/sdk \
+    --filter @immich/cli \
+    --frozen-lockfile \
+    install && \
+  pnpm \
+    --filter @immich/sdk \
+    --filter @immich/cli \
+    build && \
+  pnpm \
+    --filter @immich/cli \
+    --prod \
+    --no-optional \
+    --force \
+    deploy /app/immich/cli && \
   cp -a \
-    package.json \
-    package-lock.json \
     node_modules \
-    dist \
-    /app/immich/cli && \
+    /app/immich && \
+  echo "**** copy scripts ****" && \
+  mkdir -p \
+    /app/immich/server/bin && \
+  cp -r \
+    /tmp/immich/server/bin/get-cpus.sh \
+    /app/immich/server/bin && \
   {% if machine_learning_provider -%}
   echo "**** build machine-learning ****" && \
   if [ $(arch) = "x86_64" ]; then \
